<resources>
    <string name="app_name">Mental Health Game </string>
    <string name="title">Mental Health Game </string>
    <string name="loginHeading">Login here </string>
    <string name="confirmButton"> Create Account </string>
    <string name="backButton"> Back to login </string>
    <string name="username"> Email </string>
    <string name="password" > Password </string>
    <string name="startButton">START</string>
    <string name="registerText">Register here</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_again">Confirm Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="good_button">"Good"</string>
    <string name="bad_button">"Bad"</string>

    <string name="correct_toast">"That's Correct !</string>
    <string name="incorrect_toast">"Sorry that's Incorrect !</string>
    <string name="description">"Question: "</string>
    <string name="score_board">"Score = 0"</string>

    <string name="question_1">"Expressing your feelings to someone" </string>
    <string name="question_2">"Write it down and tear it to pieces" </string>
    <string name="question_3">"Distracting yourself with things you hate" </string>
    <string name="question_4">"Doing exercise" </string>
    <string name="question_5">"Breathing very heavily and fast" </string>
    <string name="question_6">"Watch a funny video or show"</string>
    <string name="question_7">"Focus on the bad things that have happened in the past"</string>
    <string name="question_8">"Do something generous for someone else"</string>
    <string name="question_9">"Meditation or yoga"</string>
    <string name="question_10">"Bring a friend to counselling and have listen to you"</string>
    <string name="sample_message">Hello!</string>
</resources>